Add Progress link and refactor TnTProgressIndicator
- Added a new "Progress" navigation link with an icon to MainLayout.razor.
- Refactored TnTProgressIndicator component into a single TnTProgressIndicator.cs file.
  - Removed TnTProgressIndicator.razor and TnTProgressIndicator.razor.cs files.
  - Consolidated logic and rendering into TnTProgressIndicator.cs.
- Updated _progress.scss:
  - Renamed .tnt-alternative to .tnt-progress-linear.
  - Adjusted styles to match the new class name.

--- a/LiveTest/LiveTest/Components/Layout/MainLayout.razor
+++ b/LiveTest/LiveTest/Components/Layout/MainLayout.razor
@@ -42,6 +42,7 @@
 
         <TnTSideNavLink Label="Forms" href="/forms" Icon="@(new MaterialIcon(MaterialIcon.FormatAlignCenter))" />
         <TnTSideNavLink Label="Grid" href="/datagrid" Icon="@(new MaterialIcon(MaterialIcon.Grid4X4))" />
+        <TnTSideNavLink Label="Progress" href="/progress" Icon="@(new MaterialIcon(MaterialIcon.Propane))" />
 
         @*
         <TnTSideNavMenuLink Icon="@(new MaterialIcon(MaterialIcon.Home))" Href="/" Match="NavLinkMatch.All" Status="100" Disabled="true">
