Refactor TnTSkeleton component and update navigation
Added a new "Skeleton" link in `MainLayout.razor` pointing to the `/skeleton` route with the `ShoppingBasket` icon. Refactored `TnTSkeleton` in `TnTSkeleton.cs` to inherit from `TnTComponentBase`, removed `AdditionalAttributes` and `ElementReference`, and implemented `BuildRenderTree` for manual rendering. Removed `TnTSkeleton.razor` to consolidate logic into `TnTSkeleton.cs`.

--- a/LiveTest/LiveTest/Components/Layout/MainLayout.razor
+++ b/LiveTest/LiveTest/Components/Layout/MainLayout.razor
@@ -47,6 +47,9 @@
         <TnTSideNavMenuGroup Icon="@(new MaterialIcon(MaterialIcon.Schedule))" ExpandByDefault="false" Label="Scheduler">
             <TnTSideNavLink Label="Weekly Scheduler" href="/scheduler" Icon="@(new MaterialIcon(MaterialIcon.ViewWeek))" />
         </TnTSideNavMenuGroup>
+
+        <TnTSideNavLink Label="Skeleton" href="/skeleton" Icon="@(new MaterialIcon(MaterialIcon.ShoppingBasket))" />
+
         @*
         <TnTSideNavMenuLink Icon="@(new MaterialIcon(MaterialIcon.Home))" Href="/" Match="NavLinkMatch.All" Status="100" Disabled="true">
         Home
