Replace Snackbar with Toast notifications
Replaced `TnTSnackbar` with `TnTToast` component and `TnTToastService`.
- Updated `DataGridComponent.razor` to use `ITnTToastService`.
- Removed `SnackbarComponent.razor` and `Snackbar.razor`.
- Updated `MainLayout.razor` to use `TnTToast` and added "Toast" link.
- Removed debug statements from `TnTDialog.cs`.
- Removed `TnTSnackbar` and related files.
- Updated `TnTServicesExt.cs` to use `TnTToastService`.
- Updated `style.scss` to import `_toast.scss`.
- Added `ToastComponent.razor` and `Toast.razor` for toast UI.
- Added `_toast.scss` for toast styles.
- Added `ITnTToast.cs` and `ITnTToastService.cs` for toast interfaces.

--- a/LiveTest/LiveTest.Client/Components/DataGridComponent.razor
+++ b/LiveTest/LiveTest.Client/Components/DataGridComponent.razor
@@ -1,7 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Components.QuickGrid
 @using TnTComponents
 @using TnTComponents.Grid
-@using TnTComponents.Snackbar
 <div style="height: 60vh; overflow-y:scroll">
     <TnTDataGrid Items="@Items" Virtualize="true" OnRowClicked="RowClicked" TGridItem="DataGridItem" DataGridAppearance="DataGridAppearance.Stripped" Resizable="true">
         <TnTPropertyColumn Property="@(x => x.Column1)" Sortable="true" />
@@ -21,7 +20,7 @@
 
 @code {
     [Inject]
-    private TnTSnackbarService _service { get; set; }
+    private ITnTToastService _service { get; set; }
 
     private GridItemsProvider<DataGridItem>? _itemsProvider;
     private int _count;
