--- a/LiveTest/LiveTest/Components/Layout/MainLayout.razor
+++ b/LiveTest/LiveTest/Components/Layout/MainLayout.razor
@@ -49,6 +49,7 @@
         </TnTSideNavMenuGroup>
 
         <TnTSideNavLink Label="Skeleton" href="/skeleton" Icon="@(new MaterialIcon(MaterialIcon.ShoppingBasket))" />
+        <TnTSideNavLink Label="Toast" href="/toast" />
 
         @*
         <TnTSideNavMenuLink Icon="@(new MaterialIcon(MaterialIcon.Home))" Href="/" Match="NavLinkMatch.All" Status="100" Disabled="true">
@@ -165,4 +166,4 @@
 </TnTLayout>
 
 <TnTDialog @rendermode="InteractiveAuto" />
-<TnTSnackbar @rendermode="InteractiveAuto" />
+<TnTToast @rendermode="InteractiveAuto" />
