--- a/TnTComponents/Styles/style.scss
+++ b/TnTComponents/Styles/style.scss
@@ -17,7 +17,7 @@
 @import 'TnTComponents/_accordion.scss';
 @import 'TnTComponents/_dialog.scss';
 @import 'TnTComponents/_skeleton.scss';
-@import 'TnTComponents/_snackbar.scss';
+@import 'TnTComponents/_toast.scss';
 @import 'TnTComponents/_datagrid.scss';
 @import 'TnTComponents/_chips.scss';
 @import 'TnTComponents/_typeahead.scss';
