--- a/LiveTest/LiveTest/Components/Layout/MainLayout.razor
+++ b/LiveTest/LiveTest/Components/Layout/MainLayout.razor
@@ -49,6 +49,7 @@
         </TnTSideNavMenuGroup>
 
         <TnTSideNavLink Label="Skeleton" href="/skeleton" Icon="@(new MaterialIcon(MaterialIcon.ShoppingBasket))" />
+        <TnTSideNavLink Label="TabView" href="/tabview" />
         <TnTSideNavLink Label="Toast" href="/toast" />
 
         @*
