--- a/TnTComponents/Styles/TnTComponents/_tabview.scss
+++ b/TnTComponents/Styles/TnTComponents/_tabview.scss
@@ -1,10 +1,9 @@
-﻿tnt-tab-view {
+﻿.tnt-components.tnt-tab-view {
     display: block;
     width: 100%;
-    margin-top: 0.5rem;
+    margin-top: 8px;
     position: relative;
-
-    &:not(.ready) {
+    &:not(.tnt-ready) {
         &:before {
             display: block;
             content: '';
@@ -20,84 +19,83 @@
         }
     }
 
-    & > div:first-child {
-        display: block;
+    & > .tnt-tab-view-header {
         vertical-align: bottom;
         position: sticky;
         border-bottom: 1px solid $tnt-color-outline;
-        margin: 0 0.5rem;
+        margin: 0 8px;
         white-space: nowrap;
         overflow-x: auto;
         z-index: 10;
 
-        & > span {
+        .tnt-tab-view-header-buttons {
             display: table;
             margin: 0 auto;
             height: 100%;
 
-            & > button {
-                appearance: none;
-                outline: none;
-                border: none;
-                height: 4rem;
+            .tnt-tab-view-button {
+                height: 48px;
                 display: inline-flex;
+                appearance: none;
+                border: none;
+                outline: none;
+                min-width: 80px;
                 flex-direction: column;
                 align-items: center;
                 justify-content: end;
+                margin: 0;
+                padding: 0;
                 vertical-align: bottom;
-                padding-bottom: 0.75rem;
-                padding-top: 0.25rem;
-                box-sizing: border-box;
-                min-width: 5rem;
-                width: -webkit-fit-content;
                 width: -moz-fit-content;
+                width: -webkit-fit-content;
                 width: fit-content;
-                cursor: pointer;
-                transition: 200ms ease-in-out;
+
+                &.tnt-active {
+                    color: var(--active-text-color);
+                }
+
                 @extend .tnt-title-small;
 
-                &.tnt-disabled {
-                    cursor: not-allowed;
-                }
-
-                & > span {
-                    color: inherit;
-                }
-
-                &:disabled {
-                    opacity: 0.3;
+                &:hover {
+                    box-shadow: none !important;
                 }
             }
         }
 
-        & > span:last-child {
+        .tnt-tab-view-active-indicator {
             position: absolute;
             display: inline-block;
-            height: 0.3rem;
+            height: 3px;
             border-radius: 3px 3px 0 0;
-            width: 3rem;
+            width: 48px;
             bottom: 0;
             transition: 200ms ease-in-out;
         }
     }
 
-    &.tnt-alternative {
-        div:first-child {
-            & > span {
-                & > button {
-                    height: 2rem;
-                    padding: 0 0.75rem 0.25rem 0.75rem;
-                }
-            }
+    .tnt-tab-child {
+        margin-top: 8px;
+        display: none;
 
-            & > span:last-child {
-                height: 0.2rem;
-            }
+        &.tnt-active {
+            display: block;
         }
     }
 
-    tnt-tab-child {
-        margin-top: 1rem;
+
+    &.tnt-tab-view-secondary {
+        .tnt-tab-view-header {
+            .tnt-tab-view-header-buttons {
+
+                .tnt-tab-view-button {
+                    height: 16px;
+                }
+            }
+
+            .tnt-tab-view-active-indicator {
+                height: 2px;
+            }
+        }
     }
 }
 
