Enhance active select styling and enforce width properties
Extended pseudo-classes to include `select:active` for consistent
styling of active form elements. Added `!important` to `outline-width`
and `border-width` to ensure these styles take precedence.

--- a/TnTComponents/Styles/TnTComponents/_input.scss
+++ b/TnTComponents/Styles/TnTComponents/_input.scss
@@ -168,9 +168,9 @@
         }
     }
 
-    &:focus-within, &:has(input:active), &:has(label:active) {
-        outline-width: 3px;
-        border-width: 3px;
+    &:focus-within, &:has(input:active), &:has(label:active), &:has(select:active) {
+        outline-width: 3px !important;
+        border-width: 3px !important;
 
         @each $colorClass in $color-classes {
             &.tnt-tint-color-#{$colorClass} {
