--- a/LiveTest/LiveTest.Client/Components/DataGridComponent.razor
+++ b/LiveTest/LiveTest.Client/Components/DataGridComponent.razor
@@ -1,5 +1,4 @@
-﻿@using Microsoft.AspNetCore.Components.QuickGrid
-@using TnTComponents
+﻿@using TnTComponents
 @using TnTComponents.Grid
 <div style="height: 60vh; overflow-y:scroll">
     <TnTDataGrid Items="@Items" Virtualize="true" OnRowClicked="RowClicked" TGridItem="DataGridItem" DataGridAppearance="DataGridAppearance.Stripped" Resizable="true">
@@ -22,7 +21,6 @@
     [Inject]
     private ITnTToastService _service { get; set; }
 
-    private GridItemsProvider<DataGridItem>? _itemsProvider;
     private int _count;
 
     private IQueryable<DataGridItem>? Items;
@@ -44,56 +42,7 @@
             Items = _items.AsQueryable();
         }
 
-        _itemsProvider = async request => {
-            var items = await GetItems(request);
-
-            if (items.TotalItemCount != _count && !request.CancellationToken.IsCancellationRequested) {
-                _count = items.TotalItemCount;
-                StateHasChanged();
-            }
-            return items;
-        };
-
-
-
         return Task.CompletedTask;
-    }
-
-    private Task<GridItemsProviderResult<DataGridItem>> GetItems(GridItemsProviderRequest<DataGridItem> request) {
-        Console.WriteLine(request);
-        if (Items is not null) {
-
-            var result = Items;
-
-            // KeyValuePair<string, SortDirection>? prop = request.SortOnProperties.Any() ? request.SortOnProperties.First() : null;
-            // if (prop is not null) {
-            //     switch (prop.Value.Key) {
-            //         case nameof(DataGridItem.Column1):
-            //             result = prop.Value.Value == SortDirection.Ascending ? result.OrderBy(x => x.Column1) : result.OrderByDescending(x => x.Column1);
-            //             break;
-
-            //         case nameof(DataGridItem.Column2):
-            //             result = prop.Value.Value == SortDirection.Ascending ? result.OrderBy(x => x.Column2) : result.OrderByDescending(x => x.Column2);
-            //             break;
-
-            //         case nameof(DataGridItem.Column3):
-            //             result = prop.Value.Value == SortDirection.Ascending ? result.OrderBy(x => x.Column3) : result.OrderByDescending(x => x.Column3);
-            //             break;
-            //     }
-            // }
-
-            var count = result.Count();
-
-            result = result.Skip(request.StartIndex);
-            if (request.Count.HasValue) {
-                result = result.Take(request.Count.Value);
-            }
-
-            return Task.FromResult(GridItemsProviderResult.From<DataGridItem>(result.ToList(), count));
-        }
-        else {
-            return Task.FromResult(GridItemsProviderResult.From<DataGridItem>([], 0));
-        }
     }
 
     private async Task RowClicked(DataGridItem item) {
