Refactor Typeahead component and update styles
Refactored `TnTTypeahead` component:
- Replaced `ItemSelected` with `ItemSelectedCallback`.
- Updated parameters and methods for search and item selection.
- Added necessary `@using` and `using` directives.

Updated `Typeahead.razor` to use `ItemSelectedCallback`.

Added "Typeahead" navigation link in `MainLayout.razor`.

Refactored `TnTTypeahead.razor` and `TnTTypeahead.razor.cs`:
- Removed original content.
- Added new content with `@inherits TnTInteractableComponentBase`.

Updated `_typeahead.scss`:
- Added styles for `.tnt-typeahead-box` and `.tnt-typeahead-content`.
- Adjusted progress indicator positioning and appearance.

--- a/LiveTest/LiveTest.Client/Pages/Typeahead.razor
+++ b/LiveTest/LiveTest.Client/Pages/Typeahead.razor
@@ -4,7 +4,7 @@
 
 <h3>Typeahead</h3>
 
-<TnTTypeahead  ItemsLookupFunc="SearchFunc" Label="Typeahead" ItemSelected="@((Item item) => SelectedItems.Add(item))"/>
+<TnTTypeahead  ItemsLookupFunc="SearchFunc" Label="Typeahead" ItemSelectedCallback="@((Item item) => SelectedItems.Add(item))"/>
 
 @foreach(var item in SelectedItems) {
     <span>
@@ -13,7 +13,7 @@
 }
 
 
-<TnTTypeahead ItemsLookupFunc="SearchFunc"  ItemSelected="@((Item item) => SelectedItems.Add(item))" />
+<TnTTypeahead ItemsLookupFunc="SearchFunc" ItemSelectedCallback="@((Item item) => SelectedItems.Add(item))" />
 
 @foreach (var item in SelectedItems) {
     <span>
