Simplify .tnt-label background color rules
Added a new CSS rule for the `.tnt-label` class to set its `background-color` to `$tnt-color-background`. Modified existing CSS rules to include the `.tnt-label` class with the same background color, and removed the nested loop that iterated over `$color-classes` to set the background color. These changes ensure consistency, reduce complexity, and improve maintainability.

--- a/TnTComponents/Styles/TnTComponents/_input.scss
+++ b/TnTComponents/Styles/TnTComponents/_input.scss
@@ -89,16 +89,12 @@
             outline: 1px solid $tnt-color-outline;
         }
 
+        .tnt-label {
+            background-color: $tnt-color-background;
+        }
+
         &:not(:has(input[type=checkbox])):not(:has(select[multiple])):not(fieldset) {
             &.tnt-placeholder, &:not(:has(input:placeholder-shown)), &:focus-within {
-                @each $colorClass in $color-classes {
-                    &.tnt-bg-color-#{$colorClass} {
-                        .tnt-label {
-                            background-color: var(--tnt-color-#{$colorClass});
-                        }
-                    }
-                }
-
                 .tnt-label {
                     transform: translateY(-1.65rem);
                 }
