--- a/TnTComponents/Styles/TnTComponents/_typeahead.scss
+++ b/TnTComponents/Styles/TnTComponents/_typeahead.scss
@@ -1,13 +1,23 @@
 ﻿.tnt-typeahead {
+    width: calc(100% - 16px);
+    box-sizing: border-box;
+    margin: 8px;
+
     .tnt-typeahead-box {
         position: relative;
         display: inline-block;
         vertical-align: middle;
-        margin-right: 60px;
+        width: 100%;
+
+        label, input {
+            width: 100%;
+            margin: 0;
+        }
 
         progress.tnt-components {
             position: absolute;
-            top: 16px;
+            top: 0;
+            right: 0;
         }
     }
 
