--- a/TnTComponents/Styles/TnTComponents/_typeahead.scss
+++ b/TnTComponents/Styles/TnTComponents/_typeahead.scss
@@ -2,6 +2,7 @@
     width: calc(100% - 16px);
     box-sizing: border-box;
     margin: 8px;
+    position: relative;
 
     .tnt-typeahead-box {
         position: relative;
