Refactor TnTProgressIndicator and update TnTTypeahead
Renamed `ShouldRender` to `Show` in `TnTProgressIndicator.cs` and set its default value to `true`. Updated `BuildRenderTree` to use `Show`. Reformatted attributes in `TnTTypeahead.razor` for better readability and updated logic to use `Show`. Added a "No results found" message for better user feedback.

--- a/TnTComponents/Typeahead/TnTTypeahead.razor
+++ b/TnTComponents/Typeahead/TnTTypeahead.razor
@@ -6,19 +6,17 @@
 @inherits TnTInteractableComponentBase
 
 <div @attributes="AdditionalAttributes"
-      class="@ElementClass"
-      style="@ElementStyle"
-      title="@ElementTitle"
-      lang="@ElementLang"
-      id="@ElementId"
-      name="@ElementName"
-      @ref="@Element">
+     class="@ElementClass"
+     style="@ElementStyle"
+     title="@ElementTitle"
+     lang="@ElementLang"
+     id="@ElementId"
+     name="@ElementName"
+     @ref="@Element">
 
     <span class="tnt-typeahead-box">
         <TnTInputText @bind-Value="_searchText" Appearance="@Appearance" Label="@Label" Placeholder="@Placeholder" BindOnInput="true" BindAfter="SearchAsync" Disabled="@Disabled" StartIcon="@(new MaterialIcon(MaterialIcon.Search))" />
-        @if (_searching) {
-            <TnTProgressIndicator ProgressColor="ProgressColor" Size="Size.Small" />
-        }
+        <TnTProgressIndicator Show="@_searching" ProgressColor="ProgressColor" Size="Size.Small" />
     </span>
     @if (_items.Any() || (!_items.Any() && !string.IsNullOrWhiteSpace(_searchText) && !_searching)) {
 
@@ -31,6 +29,7 @@
                             @if (ResultTemplate is not null) {
                                 @ResultTemplate(item)
                             }
+
                             else {
                                 <span class="tnt-corner-radius-5 tnt-body-medium">
                                     @item
@@ -40,6 +39,7 @@
                     }
                 </ul>
             }
+
             else if (!_items.Any() && !string.IsNullOrWhiteSpace(_searchText) && !_searching) {
                 <div class="tnt-typeahead-no-results">
                     No results found
