--- a/TnTComponents/Styles/TnTComponents/_typeahead.scss
+++ b/TnTComponents/Styles/TnTComponents/_typeahead.scss
@@ -46,14 +46,14 @@
                 cursor: pointer;
                 padding: 0.5rem;
 
+                &.tnt-focused, span:hover {
+                    background-color: color-mix(in srgb, $tnt-color-surface-tint 20%, transparent);
+                }
+
                 span {
                     transition: 200ms;
                     margin: 0.25rem;
                     padding: 0.5rem 1rem;
-
-                    &:hover {
-                        background-color: color-mix(in srgb, $tnt-color-surface-tint 20%, transparent);
-                    }
                 }
             }
 
