Add programmatic control and close functionality
Enhanced TnTAccordion with programmatic control by referencing child elements in the DOM. Added CloseAllAsync method to close all child elements. Updated TnTAccordionChild to implement new interfaces and properties, and added CloseAsync method using JS interop. Introduced addHidden function in JS module to support hiding elements.

--- a/TnTComponents/Accordion/TnTAccordion.razor
+++ b/TnTComponents/Accordion/TnTAccordion.razor
@@ -38,7 +38,7 @@
                             </h3>
                             <MaterialIcon Icon="@MaterialIcon.ArrowDropDown" />
                         </div>
-                        <div class="@(contentBuilder.AddClass("tnt-hidden", !child.OpenByDefault || (LimitToOneExpanded && foundExpanded)).Build())">
+                        <div class="@(contentBuilder.AddClass("tnt-hidden", !child.OpenByDefault || (LimitToOneExpanded && foundExpanded)).Build())" @ref="child.Element">
                             @child.ChildContent
                         </div>
                     </div>
