Refactor TnTInputFile and remove IFormField interface
The `IFormField` interface has been removed from the `TnTComponents.Form` namespace. This interface previously included properties for `EndIcon`, `Placeholder`, `StartIcon`, and `Type`.

The `TnTInputFile` component has been significantly refactored:
- It now inherits directly from `InputFile`.
- Several new parameters have been added, including `Appearance`, `AutoFocus`, `Disabled`, `ElementId`, `ElementLang`, `ElementTitle`, `MaximumFileCount`, `OnInputFileChange`, and `ReadOnly`.
- The `ElementClass` and `ElementStyle` properties have been introduced to build CSS classes and styles dynamically.
- The `FieldDisabled` and `FieldReadonly` properties determine the disabled and readonly states based on the cascading `ITnTForm` parameter.
- The `OnParametersSet` method has been overridden to update additional attributes.
- The `BuildRenderTree` method has been overridden to customize the rendering of the component.
- The `OnUploadFilesHandlerAsync` method handles file upload events and enforces the `MaximumFileCount`.

The `TnTInputFile.razor` and `TnTInputFile.razor.cs` files have been removed, and their functionality has been integrated into the `TnTInputFile` class.

In the `_buttons.scss` file, a new CSS rule has been added to style the file selector button within the `tnt-input-file` component. This rule extends the existing `tnt-label-large` class and applies various styles such as `appearance`, `user-select`, `min-height`, and `min-width`.

--- a/TnTComponents/Styles/TnTComponents/_buttons.scss
+++ b/TnTComponents/Styles/TnTComponents/_buttons.scss
@@ -1,4 +1,4 @@
-﻿button.tnt-components {
+﻿button.tnt-components, .tnt-components.tnt-input-file input::file-selector-button {
     @extend .tnt-label-large;
     appearance: none;
     user-select: none;
