Refactor CSS for .tnt-nav-link underline handling
Introduced a new CSS rule for .tnt-nav-link elements that do not have the .tnt-underlined class, applying text-decoration: none; to ensure they do not have an underline. Removed text-decoration: none; from .tnt-filled and .tnt-outlined classes as it is now covered by the new rule.

--- a/TnTComponents/Styles/TnTComponents/_anchor.scss
+++ b/TnTComponents/Styles/TnTComponents/_anchor.scss
@@ -3,11 +3,14 @@
     overflow: hidden;
     display: inline-flex;
 
+    &:not(.tnt-underlined) {
+        text-decoration: none;
+    }
+
     &.tnt-filled, &.tnt-outlined {
         @extend .tnt-label-large;
         user-select: none;
         appearance: none;
-        text-decoration: none;
         min-height: 40px;
         min-width: 40px;
         padding: 0 16px;
