Adjust padding and box-sizing in _tabview.scss
Modified padding to add 4px horizontal space. Added `box-sizing: border-box;` to include padding and border in the element's total dimensions, improving layout consistency and preventing overflow issues.

--- a/TnTComponents/Styles/TnTComponents/_tabview.scss
+++ b/TnTComponents/Styles/TnTComponents/_tabview.scss
@@ -44,11 +44,12 @@
                 align-items: center;
                 justify-content: end;
                 margin: 0;
-                padding: 0;
+                padding: 0 4px;
                 vertical-align: bottom;
                 width: -moz-fit-content;
                 width: -webkit-fit-content;
                 width: fit-content;
+                box-sizing:border-box;
 
                 &.tnt-active {
                     color: var(--active-text-color);
