--- a/TnTComponents/Styles/TnTComponents/_buttons.scss
+++ b/TnTComponents/Styles/TnTComponents/_buttons.scss
@@ -1,4 +1,4 @@
-﻿button.tnt-components, .tnt-components.tnt-input-file input::file-selector-button {
+﻿button.tnt-components {
     @extend .tnt-label-large;
     appearance: none;
     user-select: none;
