Add textarea support and new styles for form elements
Enhanced `_colors.scss` to support `textarea` in `.tnt-tint-color-#{$colorClass}` and `.tnt-on-tint-color-#{$colorClass}` classes, excluding when `textarea` is present. Updated `_input.scss` to include `textarea` in styling rules for consistent appearance. Added specific styles for elements containing `textarea`, including height, padding, and label positioning. Introduced a new rule for `select` elements to change cursor on hover. Added a new `.tnt-label` class with absolute positioning, transition, and padding, extending `.tnt-body-large`.

--- a/TnTComponents/Styles/TnTComponents/_colors.scss
+++ b/TnTComponents/Styles/TnTComponents/_colors.scss
@@ -105,7 +105,7 @@ $color-classes-no-transparent: black, white, primary, surface-tint, on-primary, 
         }
     }
 
-    .tnt-tint-color-#{$colorClass}:not(:has(input)):not(:has(select)) {
+    .tnt-tint-color-#{$colorClass}:not(:has(input)):not(:has(select)):not(:has(textarea)) {
         &:not(disabled):not(.tnt-disabled) {
             &:hover {
                 &.tnt-filled {
@@ -133,7 +133,7 @@ $color-classes-no-transparent: black, white, primary, surface-tint, on-primary, 
         }
     }
 
-    .tnt-on-tint-color-#{$colorClass}:not(:has(input)):not(:has(select)) {
+    .tnt-on-tint-color-#{$colorClass}:not(:has(input)):not(:has(select)):not(:has(textarea)) {
         &:not(disabled):not(.tnt-disabled) {
             &:hover {
                 &.tnt-filled {
