--- a/LiveTest/LiveTest.Client/Components/FormTesting.razor
+++ b/LiveTest/LiveTest.Client/Components/FormTesting.razor
@@ -144,6 +144,25 @@
             </TnTInputRadioGroup>
         </TnTColumn>
     </TnTRow>
+
+    <TnTRow>
+        <h3>
+            Input File
+        </h3>
+        <TnTColumn S="12">
+           <TnTInputFile multiple />
+        </TnTColumn>
+    </TnTRow>
+
+    <TnTRow>
+        <h3>
+            Input Area @Input.Area
+        </h3>
+
+        <TnTColumn S="6">
+            <TnTInputTextArea @bind-Value="@Input.Area" Placeholder="@_placeholder" Label="@_label" StartIcon="@_startIcon" EndIcon="@_endIcon" />
+        </TnTColumn>
+    </TnTRow>
 </TnTForm>
 
 
@@ -192,6 +211,9 @@
 
         [Required]
         public RadioEnum? Radio { get; set; }
+
+        [Required]
+        public string? Area{ get; set; }
 
     }
 
