--- a/TnTComponents/Styles/TnTComponents/_input.scss
+++ b/TnTComponents/Styles/TnTComponents/_input.scss
@@ -1,18 +1,18 @@
 ﻿.tnt-col {
     .tnt-input {
-        width: calc(100% - 1rem);
+        width: calc(100% - 16px);
     }
 }
 
 .tnt-input.tnt-components {
-    height: 3rem;
+    height: 36px;
     position: relative;
     vertical-align: middle;
     display: inline-flex;
     align-items: center;
-    padding: 0 1rem;
+    padding: 0 16px;
     box-sizing: border-box;
-    margin: 0.75rem 0.5rem 1.5rem 0.5rem;
+    margin: 12px 8px 24px 8px;
     transition: 150ms ease-in-out;
     min-width: fit-content;
 
@@ -38,34 +38,32 @@
         @extend .tnt-body-large;
     }
 
-
-
     .tnt-label {
         position: absolute;
         transition: 150ms;
-        padding: 0 0.25rem;
+        padding: 0 4px;
         @extends .tnt-body-large;
     }
 
     .tnt-validation-message {
         color: inherit;
         position: absolute;
-        bottom: -1.25rem;
+        bottom: -20px;
         @extend .tnt-body-small;
     }
 
     &:has(.tnt-icon) {
         &:has(.tnt-end-icon) {
-            padding-right: 0.75rem;
+            padding-right: 12px;
         }
 
         &:has(.tnt-start-icon) {
-            padding-left: 0.75rem;
+            padding-left: 12px;
 
             &:not(:has(input[type=checkbox])):not(:has(select[multiple])):not(fieldset) {
 
                 .tnt-label {
-                    transform: translateX(2.5rem);
+                    transform: translateX(42px);
                 }
             }
         }
@@ -75,11 +73,11 @@
             user-select: none;
 
             &.tnt-end-icon {
-                padding-left: 1rem;
+                padding-left: 16px;
             }
 
             &.tnt-start-icon {
-                padding-right: 1rem;
+                padding-right: 16px;
             }
         }
     }
@@ -98,7 +96,7 @@
         &:not(:has(input[type=checkbox])):not(:has(select[multiple])):not(fieldset) {
             &.tnt-placeholder, &:not(:has(input:placeholder-shown)), &:focus-within {
                 .tnt-label {
-                    transform: translateY(-1.65rem);
+                    transform: translateY(-20px);
                 }
             }
         }
@@ -109,7 +107,7 @@
 
         &:not(fieldset) {
             .tnt-icon, input, select {
-                transform: translateY(0.5rem);
+                transform: translateY(8px);
             }
         }
 
@@ -117,12 +115,12 @@
             &.tnt-placeholder, &:not(:has(input:placeholder-shown)), &:focus-within {
                 .tnt-label {
                     transform-origin: left;
-                    transform: translateY(-1rem) scale(0.8);
+                    transform: translateY(-10px) scale(0.8);
                 }
 
                 &:has(.tnt-start-icon) {
                     .tnt-label {
-                        transform: translateX(2.5rem) translateY(-0.8rem) scale(0.8);
+                        transform: translateX(40px) translateY(-10px) scale(0.8);
                     }
                 }
             }
@@ -130,22 +128,22 @@
     }
 
     &:has(select[multiple]):not(fieldset) {
-        height: 12rem;
+        height: 192px;
 
         select {
-            height: 10rem;
+            height: 16px;
         }
 
         &.tnt-filled {
 
             .tnt-label {
                 transform-origin: left;
-                transform: translateY(-5.3rem) scale(0.8);
+                transform: translateY(-85px) scale(0.8);
             }
 
             &:has(.tnt-start-icon) {
                 .tnt-label {
-                    transform: translateX(2.5rem) translateY(-5.3rem) scale(0.8);
+                    transform: translateX(40px) translateY(-85px) scale(0.8);
                 }
             }
         }
@@ -235,7 +233,7 @@
             top: 16px;
         }
 
-        &.tnt-filled{
+        &.tnt-filled {
             padding-top: 16px;
         }
     }
@@ -279,23 +277,23 @@
 
         &:not(.tnt-switch) {
             .tnt-checkbox {
-                width: 2.5rem;
-                height: 2.5rem;
+                width: 40px;
+                height: 40px;
                 border-radius: 50%;
 
 
                 &:before {
-                    width: 1.125rem;
-                    height: 1.125rem;
-                    left: calc(100% / 2 - calc(1.125rem / 2));
-                    top: calc(100% / 2 - calc(1.125rem / 2));
+                    width: 18px;
+                    height: 18px;
+                    left: calc(100% / 2 - calc(18px / 2));
+                    top: calc(100% / 2 - calc(18px / 2));
                     border-radius: 2px;
                     border: 2px solid $tnt-color-outline;
                 }
 
                 &:after {
-                    width: calc(1.125rem / 3);
-                    height: calc(1.125rem * .7);
+                    width: calc(18px / 3);
+                    height: calc(18px * .7);
                     left: 0; //;
                     top: 0; //;
                     border-radius: 1px;
@@ -303,7 +301,7 @@
                     border-right-width: 2px;
                     border-bottom-style: solid;
                     border-right-style: solid;
-                    transform: translateX(calc(2.5rem / 2 - calc(calc(1.125rem / 3) / 2))) translateY(calc(2.5rem / 2 - calc(calc(1.125rem * .8) / 1.75))) rotateZ(45deg) rotateX(90deg);
+                    transform: translateX(calc(40px / 2 - calc(calc(18px / 3) / 2))) translateY(calc(40px / 2 - calc(calc(18px * .8) / 1.75))) rotateZ(45deg) rotateX(90deg);
                 }
             }
 
@@ -320,27 +318,27 @@
         &.tnt-switch {
             .tnt-checkbox {
                 width: 2.75rem;
-                height: 1.5rem;
+                height: 24px;
                 border: 2px solid $tnt-color-outline;
                 background-color: $tnt-color-surface-container-highest;
                 border-radius: 8rem;
                 box-sizing: border-box;
 
                 &:before {
-                    width: 2.5rem;
-                    height: 2.5rem;
-                    left: calc(2.5rem / -2 + 0.75rem);
+                    width: 40px;
+                    height: 40px;
+                    left: calc(40px / -2 + 12px);
                     top: -50%;
                     border-radius: 50%;
                 }
 
                 &:after {
-                    width: 0.75rem;
-                    height: 0.75rem;
+                    width: 12px;
+                    height: 12px;
                     border-radius: 50%;
                     background-color: $tnt-color-outline;
-                    left: 0.4rem;
-                    top: calc(50% / 2 - calc(0.75rem / 8));
+                    left: 6px;
+                    top: calc(50% / 2 - calc(12px / 8));
                     @extend .tnt-elevation-1;
                 }
             }
@@ -372,7 +370,7 @@
 
                 .tnt-checkbox {
                     &:after {
-                        transform: translateX(calc(2.5rem / 2 - calc(calc(1.125rem / 3) / 2))) translateY(calc(2.5rem / 2 - calc(calc(1.125rem * .8) / 1.75))) rotateZ(45deg);
+                        transform: translateX(calc(40px / 2 - calc(calc(18px / 3) / 2))) translateY(calc(40px / 2 - calc(calc(18px * .8) / 1.75))) rotateZ(45deg);
                     }
                 }
 
@@ -404,11 +402,11 @@
 
                 .tnt-checkbox {
                     &:before {
-                        transform: translateX(1.125rem);
+                        transform: translateX(18px);
                     }
 
                     &:after {
-                        transform: translateX(1.125rem) scale(1.35);
+                        transform: translateX(18px) scale(1.35);
                         filter: invert(1);
                     }
                 }
@@ -424,11 +422,11 @@
 
         &:has(.tnt-start-icon) {
             .tnt-checkbox {
-                left: 2.5rem;
+                left: 40px;
             }
 
             .tnt-label {
-                margin-left: 2rem;
+                margin-left: 32px;
             }
         }
 
@@ -593,70 +591,68 @@
 }
 
 .tnt-components.tnt-input-file input::file-selector-button {
-    button.tnt-components {
-        @extend .tnt-label-large;
-        appearance: none;
-        user-select: none;
-        min-height: 40px;
-        min-width: 40px;
-        padding: 0 16px;
-        box-sizing: border-box;
-        margin: 8px;
-        transition: 250ms;
-        position: relative;
+    @extend .tnt-label-large;
+    appearance: none;
+    user-select: none;
+    min-height: 40px;
+    min-width: 40px;
+    padding: 0 16px;
+    box-sizing: border-box;
+    margin: 8px;
+    transition: 250ms;
+    position: relative;
 
-        &.tnt-ripple {
-            overflow: hidden;
-        }
+    &.tnt-ripple {
+        overflow: hidden;
+    }
 
-        &:not(.tnt-outlined) {
-            border: none;
-        }
+    &:not(.tnt-outlined) {
+        border: none;
+    }
 
-        &:not(:has(.tnt-icon)) {
-            padding: 0 24px;
+    &:not(:has(.tnt-icon)) {
+        padding: 0 24px;
+    }
+
+    .tnt-icon {
+        vertical-align: middle;
+        text-align: inherit;
+        font-size: 18px;
+        padding: 0 4px;
+        pointer-events: none;
+    }
+
+    &:not(.tnt-filled):not(.tnt-outlined) {
+        background-color: transparent;
+    }
+
+    &:has(> progress.tnt-components) {
+
+        & > progress.tnt-components {
+            position: absolute;
+
+            &:not(.tnt-alternative) {
+                padding: 0;
+                margin: 0;
+                height: 32px;
+                width: 32px;
+                top: 4px;
+                left: calc(50% - 16px);
+            }
+
+            &.tnt-alternative {
+                left: 0;
+            }
         }
+    }
+
+    &.tnt-image-button {
+        height: 40px;
+        width: 40px;
+        padding: 0;
 
         .tnt-icon {
-            vertical-align: middle;
-            text-align: inherit;
-            font-size: 18px;
-            padding: 0 4px;
-            pointer-events: none;
-        }
-
-        &:not(.tnt-filled):not(.tnt-outlined) {
-            background-color: transparent;
-        }
-
-        &:has(> progress.tnt-components) {
-
-            & > progress.tnt-components {
-                position: absolute;
-
-                &:not(.tnt-alternative) {
-                    padding: 0;
-                    margin: 0;
-                    height: 32px;
-                    width: 32px;
-                    top: 4px;
-                    left: calc(50% - 16px);
-                }
-
-                &.tnt-alternative {
-                    left: 0;
-                }
-            }
-        }
-
-        &.tnt-image-button {
-            height: 40px;
-            width: 40px;
-            padding: 0;
-
-            .tnt-icon {
-                font-size: 24px;
-            }
+            font-size: 24px;
         }
     }
 }
