--- a/TnTComponents/Styles/TnTComponents/_datagrid.scss
+++ b/TnTComponents/Styles/TnTComponents/_datagrid.scss
@@ -34,6 +34,9 @@
                     padding: 4px 8px;
                     vertical-align: middle;
                     color: $tnt-color-on-surface;
+                    box-sizing: border-box;
+                    min-width: 100%;
+                    width: max-content;
 
                     .tnt-icon {
                         float: right;
